Revision history for Dancer

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]

 [DOCUMENTATION]

 [ENHANCEMENTS]

 [NEW FEATURES]

 [STATISTICS]

1.3131_0 2014-10-11
 [BUG FIXES]
 - Test was failing under perl 5.8.9. (GH#1057, Tom Hukins)
 - Don't get tripped by YAML::XS's readonly values. (GH#1070)

 [DOCUMENTATION]
 - Minor doc update to detail how to pass protocol information in Apache
   (GH#1079, Andy Beverley)
 - Add the Dancer policy POD.

 [ENHANCEMENTS]
 - Dancer::Template::TemplateToolkit now supports DATA-embedded templates.
   (GH#1061, Jochen Lutz)
 - New function 'param_array'. (GH#1055, Yanick Champoux)
 - D::Serializer::YAML and Dancer::Config can now use 'YAML::XS'.

 [MISC]
 - Add 'YAML' as a recommended dependency. (GH#1080)

 [STATISTICS]
 - code churn: 14 files changed, 348 insertions(+), 30 deletions(-)

1.3130 2014-09-15
 [BUG FIXES]
 - Bogus dependency for 'mro'. (GH#1069)

 [STATISTICS]
 - code churn: 2 files changed, 21 insertions(+), 12 deletions(-)

1.3129 2014-09-09
 [BUG FIXES]
 - Dzil conversion left 'dancer' script behind. (GH#1066)

 [STATISTICS]
 - code churn: 17 files changed, 1425 insertions(+), 1432 deletions(-)

1.3128 2014-09-09
 [BUG FIXES]
 - Remove test dependency for Person and Person::Child. (GH#1063)

1.3127 2014-09-08
 [BUG FIXES]
 - Test was using deprecated 'import_warnings'. (GH#1045, mokko)
 - Fix default test names for headers and redirection test methods.
   (GH#1048, odyniec)
 - DANCER_SERVER_TOKENS and DANCER_SESSION_INFO are now
   DANCER_NO_SERVER_TOKENS and DANCER_NO_SESSION_INFO. And working. :-)
   (GH#1014, Yanick Champoux)
 - 'any' wasn't understanding 'del' (only 'delete').  (GH#1044, Yanick
   Champoux)

 [DISTRIBUTION]
 - Now using Dist::Zilla as package manager.

 [DOCUMENTATION]
 - Correct POD formatting for HTTP methods in introduction.pod. (GH#1047,
   Lx)

 [ENHANCEMENTS]
 - environment configs are now merged with the global config, versus the